# bedit-backend

./: .gitignore  README.md  pyproject.toml  start.sh
.github/workflows/: deploy.yml
src/bedit_backend/: chat.py  init_msgs.py  ocr.py  server.py  uwsgi.ini
src/bedit_backend/utils/: db_handler.py  init_msgs.py  loguru_logger.py
