[project]
name = "bedit-backend"
version = "0.1.4"
description = "Backend for BEdit, a AI-powered rich editor."
authors = [
    { name = "thoulee", email = "thou_lee@outlook.com" },
]
dependencies = [
    "erniebot>=0.5.7",
    "flask[async]>=3.0.3",
    "loguru>=0.7.2",
    "flask-cors>=4.0.1",
    "markdown>=3.6",
    "rpds-py>=0.18.1",
    "pymongo[srv]>=4.8.0",
    "pytoml>=0.1.21",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
server = "python ./src/bedit_backend/server.py"
