[project]
name = "bedit-backend"
version = "0.1.4"
description = "Backend for BEdit, a AI-powered rich editor."
authors = [
    { name = "thoulee", email = "thou_lee@outlook.com" },
]
dependencies = [
    "erniebot>=0.5.7",
    "loguru>=0.7.2",
    "markdown>=3.6",
    "rpds-py>=0.18.1",
    "pymongo[srv]>=4.8.0",
    "pytoml>=0.1.21",
    "paddlepaddle>=2.6.1",
    "paddleocr>=2.8.1",
    "setuptools>=71.1.0",
    "django>=5.1.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
server = "python ./src/bedit_backend/server.py"
prod = "gunicorn bedit_backend.wsgi:application --bind 0.0.0.0:8000"
