[project]
name = "bedit-backend"
version = "0.2.0"
description = "Backend for BEdit, a AI-powered rich editor."
authors = [
    { name = "thoulee", email = "thou_lee@outlook.com" },
]
dependencies = [
    "erniebot>=0.5.7",
    "flask[async]>=3.0.3",
    "loguru>=0.7.2",
    "flask-cors>=4.0.1",
    "markdown>=3.6",
    "rpds-py>=0.18.1",
    "pymongo[srv]>=4.8.0",
    "pytoml>=0.1.21",
    "paddlepaddle>=2.6.1",
    "paddleocr>=2.8.1",
    "setuptools>=71.1.0",
    "waitress>=3.0.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false
package-dir = "src"
source-includes = ["src/**/*.py"]

[tool.pdm.scripts]
dev = {cmd = "python -m src.bedit_backend.server"}
start = {cmd = "waitress-serve --listen=*:8080 src.bedit_backend.server:app"}
install-dev = "pip install -e ."
